@@ -1,2 +1,0 @@
-Site URL: https://watchmdh.to/
-Contact, DMCA: https://watchmdh.to/contact/
